# quilscan-qclient

./: .gitattributes  .gitignore  Cargo.toml  README.md  Taskfile.yaml  install-emp.sh
crates/bls48581/: Cargo.toml  NOTICE  README.md
crates/bls48581/src/: bls.rs  lib.rs  lib.udl  optimized_ceremony.json
crates/bulletproofs/: CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  build.rs
crates/bulletproofs/benches/: linear_proof.rs  r1cs.rs  range_proof.rs  uniffi_bulletproofs.rs
crates/bulletproofs/docs/: r1cs-docs-example.md
crates/bulletproofs/src/: curve_adapter.rs  errors.rs  generators.rs  inner_product_proof.rs  lib.rs  lib.udl  linear_proof.rs  transcript.rs  uniffi_bulletproofs.rs  util.rs
crates/bulletproofs/tests/: r1cs.rs  range_proof.rs
crates/channel/: Cargo.toml
crates/channel-wasm/: Cargo.toml
crates/channel-wasm/src/: lib.rs
crates/channel/src/: lib.rs  lib.udl
crates/dkls23/: .cargo_vcs_info.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.orig  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
crates/dkls23-wasm/: Cargo.toml
crates/dkls23-wasm/src/: lib.rs
crates/dkls23/.devcontainer/: devcontainer.json  docker-compose.yml
crates/dkls23/.devtools/: setup-githooks
crates/dkls23/.github/: pull_request_template.md
crates/dkls23/src/: lib.rs  protocols.rs  utilities.rs
crates/dkls23_ffi/: Cargo.toml  build.rs
crates/dkls23_ffi/src/: lib.rs  lib.udl
crates/ferret/: Cargo.toml  build.rs  emp_bridge.cpp  emp_bridge.h
crates/ferret/examples/: simple_ot.rs
crates/ferret/src/: lib.rs  lib.udl
crates/quil-consensus/: Cargo.toml
crates/quil-consensus/src/: bitmask.rs  committee.rs  counters.rs  event_handler.rs  event_loop.rs  forest.rs  identifier_set.rs  leader_provider.rs  lib.rs  liveness_provider.rs  models.rs  pacemaker.rs  packer.rs  safety_rules.rs  signature_aggregator.rs  signer.rs  state_producer.rs  state_signer_decoder.rs  timeout_aggregator.rs  timeout_processor.rs  timeouts_cache.rs  tracker.rs  validator.rs  verification.rs  verifier.rs  vote_aggregator.rs  vote_collector.rs  vote_processor.rs  votes_cache.rs  voting_provider.rs
crates/quil-crypto/: Cargo.toml
crates/quil-crypto/src/: bls.rs  bulletproof_adapter.rs  ed25519.rs  ed448.rs  frame_prover.rs  inclusion.rs  key_manager.rs  lib.rs  poseidon.rs  secp256k1.rs
crates/quil-engine/: Cargo.toml  mainnet_genesis.json
crates/quil-engine/src/: app_engine.rs  app_glue.rs  app_shard_cache.rs  app_shard_metadata.rs  app_timeout_aggregation.rs  app_types.rs  app_vote_aggregation.rs  bls_signature_aggregator.rs  bls_verifier.rs  committee.rs  consensus_activation.rs  consensus_bootstrap.rs  consensus_glue.rs  consensus_metrics.rs  consensus_store.rs  consensus_types.rs  consensus_wire.rs  coverage.rs  current_frame.rs  difficulty.rs  engine_state.rs  event_distributor.rs  fees.rs  fork_choice.rs  frame_chain_checker.rs  frame_materializer.rs  frame_processor.rs  frame_replay.rs  frame_validator.rs  genesis.rs  global_engine.rs  halt_state.rs  leader_provider.rs  lib.rs  message_collector.rs  message_router.rs  metrics.rs  multi_proof_cache.rs  prover_message_transport.rs  prover_pipeline.rs  (+15 more)
crates/quil-engine/tests/: app_shard_attestation.rs  e2e_consensus.rs
crates/quil-execution/: Cargo.toml  build.rs
crates/quil-execution/src/: canonical_cursor.rs  compute_engine.rs  engines.rs  fees.rs  global_engine.rs  global_schema.rs  hypergraph_engine.rs  hypergraph_state.rs  intrinsics.rs  lib.rs  manager.rs  message_envelope.rs  metrics.rs  prover_registry.rs  seniority_compat.rs  testing.rs  token_engine.rs  traversal_proof.rs  turtle.rs
crates/quil-execution/tests/: decoder_fuzz.proptest-regressions  decoder_fuzz.rs  go_corpus.rs
crates/quil-hypergraph/: Cargo.toml
crates/quil-hypergraph-ffi/: Cargo.toml  generate.sh
crates/quil-hypergraph-ffi/src/: lib.rs  lib.udl
crates/quil-hypergraph/src/: addressing.rs  crdt.rs  lib.rs  snapshot.rs  testing.rs
crates/quil-hypergraph/tests/: crdt_props.rs
crates/quil-keys/: Cargo.toml
crates/quil-keys-ffi/: Cargo.toml  build.rs  generate.sh
crates/quil-keys-ffi/src/: lib.rs  lib.udl
crates/quil-keys/src/: file_key_manager.rs  lib.rs
crates/quil-node/: Cargo.toml
crates/quil-node/src/: blossomsub_consensus_publisher.rs  dht_node.rs  diagnostic.rs  logging.rs  main.rs  mem_stats.rs  prover_message_transport_prod.rs  prover_tree_syncer_prod.rs  release_check.rs  worker_node.rs
crates/quil-node/tests/: logging_rotation.rs
crates/quil-p2p/: Cargo.toml  build.rs
crates/quil-p2p/proto/: rpc.proto
crates/quil-p2p/src/: behaviour.rs  bitmask.rs  blossomsub.rs  ed448_identity.rs  ed448_noise.rs  ed448_noise_transport.rs  ed448_peer.rs  handler.rs  lib.rs  node.rs  peer_authenticator.rs  peer_info.rs  protocol.rs  scoring.rs  signer_registry.rs  test_harness.rs  tls_debug.rs
crates/quil-rpc/: Cargo.toml
crates/quil-rpc/src/: archive_client.rs  dispatch_service.rs  frame_sync.rs  global_service.rs  hypergraph_sync_probe.rs  hypersync_server.rs  lib.rs  mixnet_service.rs  node_service.rs  peer_auth_middleware.rs  peer_dial.rs  prover_counts.rs  proxy_pubsub.rs  pubsub_proxy.rs  quil_tls.rs  shard_info_refresh.rs  stub_services.rs
crates/quil-rpc/tests/: cross_language_signing.rs  send_signature_round_trip.rs  vertex_data_end_to_end.rs
crates/quil-store/: Cargo.toml
crates/quil-store/examples/: inspect_clock.rs  inspect_clock_subkeys.rs  inspect_committee.rs  inspect_prefixes.rs  inspect_qc.rs
crates/quil-store/src/: clock.rs  disk_monitor.rs  dispatch.rs  encoding.rs  hypergraph.rs  import.rs  key.rs  lib.rs  migration.rs  rocksdb_store.rs  shards.rs  testing.rs  token.rs  worker.rs
crates/quil-tries/: Cargo.toml
crates/quil-tries-ffi/: Cargo.toml  build.rs  generate.sh
crates/quil-tries-ffi/src/: lib.rs  lib.udl
crates/quil-tries/src/: compare.rs  lib.rs  (+6 more)
crates/quil-types/: Cargo.toml  build.rs
crates/quil-wallet/: Cargo.toml
crates/rpm/: Cargo.toml
crates/verenc/: Cargo.toml  README.md  build.rs  run_size_benchmarks.sh
crates/verenc-wasm/: Cargo.toml
(+1057 files in other folders)
