[package]
name = "channelwasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "channelwasm"

[dependencies]
wasm-bindgen = "0.2"
channel = { path = "../channel", version = "^0.1.0" }
getrandom = { version = "0.2", features = ["js"] }
serde = "1.0.208"
serde_json = "1.0.117"
base64 = "0.22.1"
ed448-goldilocks-plus = "0.11.2"
ed448-rust = { path = "../ed448-rust", version = "0.1.2" }
rand = "0.8.5"
sha2 = "0.10.8"
hkdf = "0.12.4"
aes-gcm = "0.10.3"
