[package]
name = "channel"
version = "0.1.0"
edition = "2021"

[lib]
# cdylib added so Android jniLibs (.so) can be produced via cargo-ndk.
# staticlib stays for the iOS XCFramework path.
crate-type = ["lib", "staticlib", "cdylib"]
name = "channel"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
base64 = "0.22.1"
serde_json = "1.0.117"
ed448-goldilocks-plus = "0.11.2"
ed448-rust = { path = "../ed448-rust", version = "0.1.2" }
hex = "0.4.3"
rand = "0.8.5"
sha2 = "0.10.8"
hkdf = "0.12.4"
aes-gcm = "0.10.3"
thiserror = "1.0.63"
hmac = "0.12.1"
serde = { version = "1.0.208", features = ["derive"] }
lazy_static = "1.5.0"
uniffi = {  version= "0.28.3", features = ["cli"]}

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
rand = "0.8.5"

[build-dependencies]
uniffi = { version = "0.28.3", features = [ "build" ] }

[[bench]]
name = "bench_channel"
harness = false
