[package]
name = "dkls23wasm"
version = "0.1.0"
edition = "2021"
description = "wasm-bindgen wrappers around the dkls23_ffi threshold ECDSA protocol"
license = "Apache-2.0 OR MIT"

[lib]
crate-type = ["cdylib"]
name = "dkls23wasm"

[dependencies]
wasm-bindgen = "0.2"
dkls23_ffi = { path = "../dkls23_ffi" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
getrandom = { version = "0.2", features = ["js"] }
