[package]
edition = "2021"
name = "dkls23"
version = "0.1.1"
description = "DKLs23 Threshold ECDSA in Three Rounds"
readme = "README.md"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/0xCarbon/DKLs23"

[lib]
name = "dkls23"
path = "src/lib.rs"

[dependencies]
bitcoin_hashes = "0.13"
elliptic-curve = { version = "0.13", features = ["serde", "sec1"] }
getrandom = "0.2"
hex = "0.4"
k256 = { version = "0.13", features = ["serde"] }
p256 = { version = "0.13", features = ["serde"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.12"
sha3 = "0.10"

[features]
insecure-rng = []

[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.2"
features = ["js"]
