[package]
name = "ferret"
version = "0.1.0"
authors = ["Cassandra Heart"]
edition = "2018"
description = "FERRET is an oblivious transfer library"
license = "AGPL"

[lib]
crate-type = ["lib", "staticlib"]
name = "ferret"

[dependencies]
libc = "0.2"
uniffi = {  version= "0.28.3", features = ["cli"]}
hex = "0.4.3"
rand = "0.9.0"
rand_chacha = "0.9.0"

[build-dependencies]
uniffi = { version = "0.28.3", features = [ "build" ] }
bindgen = "0.63.0"
cc = "1.0"
