[package]
name = "quil-crypto"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Crypto adapters wrapping existing Quilibrium crates with quil-types traits"

[features]
default = []
# Enable VDF frame prover (requires FLINT native library)
vdf-prover = ["dep:vdf"]

[dependencies]
quil-types = { path = "../quil-types" }
bls48581 = { path = "../bls48581" }
vdf = { path = "../vdf", optional = true }
ed448-rust = { path = "../ed448-rust" }
ed448-bulletproofs = { path = "../bulletproofs" }
sha3 = "0.10"
verenc = { path = "../verenc" }
channel = { path = "../channel" }
sha2 = "0.10"
rand = "0.8"
poseidon-rs = "0.0.10"
ff_ce = "0.11"
num-bigint = "0.4"
hex = "0.4"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
k256 = { version = "0.13.4", features = ["ecdsa"] }
tracing = "0.1"
