[package]
name = "quil-engine"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Global and App shard consensus engines for the Quilibrium node"

[dependencies]
quil-types = { path = "../quil-types" }
quil-config = { path = "../quil-config" }
quil-crypto = { path = "../quil-crypto" }
quil-store = { path = "../quil-store" }
quil-tries = { path = "../quil-tries" }
quil-hypergraph = { path = "../quil-hypergraph" }
quil-keys = { path = "../quil-keys" }
quil-p2p = { path = "../quil-p2p" }
quil-consensus = { path = "../quil-consensus" }
quil-execution = { path = "../quil-execution" }
tokio = { version = "1", features = ["sync", "rt", "time", "macros"] }
tokio-util = "0.7"
tracing = "0.1"
thiserror = "2"
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
hex = "0.4"
lru = "0.12"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost = "0.13"
sha2 = "0.10"
sha3 = "0.10"
core_affinity = "0.8"
rand = "0.8"
ed448-rust = { path = "../ed448-rust" }
vdf = { path = "../vdf" }
metrics = "0.24"
tonic = "0.12"
libc = "0.2"
http = "1"
async-trait = "0.1"

[dev-dependencies]
quil-hypergraph = { path = "../quil-hypergraph", features = ["test-utils"] }
quil-execution = { path = "../quil-execution", features = ["testing-stubs"] }
quil-crypto = { path = "../quil-crypto", features = ["vdf-prover"] }
bs58 = "0.5"
parking_lot = "0.12"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
