[package]
name = "quil-rpc"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "gRPC services for the Quilibrium node"

[dependencies]
quil-types = { path = "../quil-types" }
quil-config = { path = "../quil-config" }
quil-engine = { path = "../quil-engine" }
quil-store = { path = "../quil-store" }
quil-p2p = { path = "../quil-p2p" }
quil-keys = { path = "../quil-keys" }
quil-execution = { path = "../quil-execution" }
quil-hypergraph = { path = "../quil-hypergraph" }
quil-tries = { path = "../quil-tries" }
quil-crypto = { path = "../quil-crypto" }
num-bigint = "0.4"
tonic = { version = "0.12", features = ["transport", "tls"] }
tokio = { version = "1", features = ["sync", "rt", "time", "macros", "rt-multi-thread"] }
tokio-util = "0.7"
tracing = "0.1"
thiserror = "2"
prost = "0.13"
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"
ed25519-dalek = { version = "2", features = ["pkcs8"] }
base64 = "0.22"
ed448-rust = { path = "../ed448-rust" }
rcgen = "0.11"
sha2 = "0.10"
hex = "0.4"
x509-parser = "0.16"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http2", "tokio"] }
tower = "0.5"
http = "1"
hyper = "1"

[dev-dependencies]
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
