[package]
name = "quil-types"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Core types, protobuf definitions, and trait boundaries for the Quilibrium node"

[dependencies]
prost = "0.13"
prost-types = "0.13"
tonic = "0.12"
async-trait = "0.1"
bytes = "1"
thiserror = "2"
num-bigint = "0.4"
tokio = { version = "1", features = ["sync"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }

[build-dependencies]
prost-build = "0.13"
tonic-build = "0.12"
