[package]
name = "verenc"
version = "0.1.0"
authors = ["Anonymous conference submission", "Cassandra Heart"]
edition = "2018"
description = "Implementation of verifiable encryption of discrete logarithms with the DKG-in-the-head approach, adapted to Curve448"
license = "MIT"

[lib]
crate-type = ["lib", "staticlib"]
name = "verenc"

[dependencies]
sha2 = "0.9.0"
hex = "0.4.0"
rand = "0.8"
ed448-goldilocks-plus = "0.11.2"
uniffi = {  version= "0.28.3", features = ["cli"]}
serde = "1.0.208"
rand_chacha = "0.3.1"

[build-dependencies]
uniffi = { version = "0.28.3", features = [ "build" ] }
